Add my template

--- a/index.html
+++ b/index.html
@@ -23,10 +23,25 @@
 	</head>
 	<body>
 		<div class="reveal">
-			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
-			</div>
+<div class='slides'>
+<section data-markdown data-separator='^\n---$'><script type='text/template'>
+### Title
+### @場所
+### Yuya Takashina (早稲田大学)
+
+---
+
+### 自己紹介
+- 名前: 高品　佑也
+- Twitter: [@takashinayuya](https://twitter.com/takashinayuya)
+- GitHub: [y-takashina](https://github.com/y-takashina)
+- 専攻: 確率的情報処理
+  - 卒論は時系列の異常検知
+- C#/Scala/Python
+
+---
+
+</script></section>
 		</div>
 
 		<script src="lib/js/head.min.js"></script>
